# od-rust-template

./: .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
application/github-webhook-adapter/: Cargo.toml
application/github-webhook-adapter/src/: lib.rs
application/github-webhook-adapter/src/webhook/: github_event_dto.rs  github_metadata.rs  github_webhook_adapter.rs  mod.rs
application/rest-api-adapter/: Cargo.toml
application/rest-api-adapter/src/: lib.rs
application/rest-api-adapter/src/api/: user_api.rs
application/rest-api-adapter/src/dto/: mod.rs  user_dto_request.rs  user_dto_response.rs
bootstrap/: Cargo.toml
bootstrap/resources/: post_installation_creation.json
bootstrap/src/: lib.rs  main.rs
bootstrap/tests/: create_user_it.rs  install_and_create_github_organization_it.rs
bootstrap/tests/common/: mod.rs  postgres_image.rs
domain/: Cargo.toml
domain/src/model/: organization.rs  user.rs
domain/src/port/input/: mod.rs  organization_facade_port.rs  user_facade_port.rs
domain/src/port/output/: mod.rs  organization_storage_port.rs  user_storage_port.rs
domain/src/service/: mod.rs  organization_service.rs  user_service.rs
infrastructure/postgres-adapter/: Cargo.toml  diesel.toml
infrastructure/postgres-adapter/migrations/2023-07-08-141928_create_user/: up.sql
infrastructure/postgres-adapter/migrations/2023-07-10-095627_create_organizations/: up.sql
infrastructure/postgres-adapter/src/: lib.rs
infrastructure/postgres-adapter/src/adapter/: mod.rs  postgres_adapter.rs  postgres_organization_adapter.rs  postgres_user_adapter.rs
infrastructure/postgres-adapter/src/client/: mod.rs  postgres_client.rs
infrastructure/postgres-adapter/src/config/: mod.rs  postgres_configuration.rs
infrastructure/postgres-adapter/src/entity/: mod.rs  organization_entity.rs  schema.rs  user_entity.rs
