[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Github-webhook-adapter for github events"
edition = "2021"
name = "github-webhook-adapter"
repository = "https://github.com/onlydustxyz/od-rust-template"
version = "1.0.0"

[lib]

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json","uuid"] }
domain = { path = "../../domain" }
serde_json = "1.0.100"
hmac = "0.12.1"
sha2 = "0.10.7"
hex-literal = "0.4.1"
# Test
fake = "2.6.1"
mockall = "0.11.4"
