[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Rest-api-adapter implementing the domain input ports"
edition = "2021"
name = "rest-api-adapter"
repository = "https://github.com/onlydustxyz/od-rust-template"
version = "1.0.0"

[lib]

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json","uuid"] }
domain = { path = "../../domain" }
fake = "2.6.1"
mockall = "0.11.4"
serde_json = "1.0.100"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
