[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Postgres-adapter implementing the domain output ports"
edition = "2021"
name = "postgres-adapter"
repository = "https://github.com/onlydustxyz/od-rust-template"
version = "1.0.0"

[lib]

[dependencies]
domain = { path = "../../domain" }
