[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Postgres-adapter implementing the domain output ports"
edition = "2021"
name = "postgres-adapter"
repository = "https://github.com/onlydustxyz/od-rust-template"
version = "1.0.0"

[lib]

[dependencies]
domain = { path = "../../domain" }
diesel = { version = "2.1.0", features = ["postgres","uuid","extras"] }
diesel_migrations = "2.1.0"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
